--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "bun install --no-frozen-lockfile && bun run build"
+command = "rm -rf node_modules && bun install && bun run build"
 publish = "dist"
 
 [build.environment]
